2006-11-30  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPrinters): Include
	printer-state-message attribute.

2006-11-29  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getJobs): Include job-priority
	attribute.

2006-11-10  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.15.

2006-11-10  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getJobs): New method.
	(Connection_cancelJob): New method.

2006-11-02  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.14.

2006-11-02  Tim Waugh  <twaugh@redhat.com>

	* cupsppd.c (Option_getChoices): Handle enum values already set
	outside the range (bug #213136).

2006-10-24  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.h: Removed bit-rotten CUPS 1.1.x compatibility code.

2006-10-02  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.13.

2006-10-02  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c (initcups): Export HTTP_FORBIDDEN as well.

2006-07-05  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.12.

2006-07-05  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_addPrinterOptionDefault): Send
	strings as strings, not character sequences.

2006-05-25  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.11.

2006-05-25  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c (initcups): Selected HTTP status codes.

2006-05-16  Tim Waugh  <twaugh@redhat.com>

	* cupsppd.c (PPD_writeFd): Follow upstream behaviour for
	PaperDimension and ImageableArea (see STR #1689).

2006-05-15  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.10.

2006-05-15  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_addPrinter): Put debug messages
	in.

	* cupsmodule.c (debugprintf): Implemented.

	* cupsmodule.h: Declare debugprintf().

2006-05-05  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getClasses): Handle IPP_NOT_FOUND,
	which is returned when there are no classes.